--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,32 @@
   text-align: center;
 }
 
-/* .question {
-  font-weight: 400;
-  color: hsl(237, 12%, 33%);
-} */
-
-/* .arrowDown {
-  width: 20px;
-  height: 15px;
-} */
-
 .arrowUp {
   transform: scaleY(-1);
+}
+
+.imagePattern {
+  position: absolute;
+ left: -40%;
+
+}
+
+.imageWoman {
+  position: absolute;
+  overflow: hidden;
+  top: 22%;
+  left: -10%;
+  z-index: 1;
+}
+
+.imageBox{
+  position: absolute;
+  overflow: visible;
+  left: -14%;
+  top: 44%;
+  z-index: 2;
+  transition: top ease 0.5s;
+}
+.imageBox:hover{
+  top: 40%;
 }
